[project]
name = "qa-checklist-action"
version = "0" # we're not an actual package.
description = "QA checklist action: checks if a PR needs manual testing."
authors = [{ name = "Bruno Oliveira", email = "bruno@esss.co" }]
dependencies = [
    "github3.py",
    "requests",
]
license = { text = "MIT" }
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "attrs",
    "pre-commit",
    "pytest",
    "pytest-datadir",
    "pytest-mock",
    "pytest-regressions",
    "responses",
]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
disallow_untyped_defs = true
